fix PersonalEditPage elements